# ITKTutorialExercises

./: CMakeLists.txt  README.txt
Source/: CMakeLists.txt
Source/exercise1/: CMakeLists.txt  HelloWorld.cxx
Source/exercise10/: CMakeLists.txt  filter.cxx  filterAnswer1.cxx  filterAnswer2.cxx
Source/exercise11/: CMakeLists.txt  filter.cxx  filterAnswer.cxx
Source/exercise12/: CMakeLists.txt  filter.cxx  filter3D.cxx  filterAnswer.cxx  filterAnswer2.cxx
Source/exercise13/: CMakeLists.txt  filter.cxx  filterAnswer.cxx
Source/exercise14/: CMakeLists.txt  filter.cxx
Source/exercise15/: CMakeLists.txt  filter.cxx
Source/exercise16/: CMakeLists.txt  filter.cxx
Source/exercise17/: CMakeLists.txt  filter.cxx
Source/exercise18/: CMakeLists.txt  filter.cxx
Source/exercise19/: CMakeLists.txt  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  myProject.cxx  myProjectAnswer.cxx
Source/exercise2/: CMakeLists.txt  myProject.cxx
Source/exercise20/: CMakeLists.txt  registration.cxx  registrationAnswer.cxx
Source/exercise21/: CMakeLists.txt  registration.cxx
Source/exercise22/: CMakeLists.txt  registration.cxx
Source/exercise23/: CMakeLists.txt  MyFunctorImageFilter.h  main.cxx
Source/exercise24/: CMakeLists.txt  DividerByTwoImageFilter.h
Source/exercise25/: CMakeLists.txt  DividerImageFilter.h  main.cxx
Source/exercise26/: CMakeLists.txt  itkFirstQuadrantExtractImageFilter.h  itkFirstQuadrantExtractImageFilter.txx  main.cxx
Source/exercise27/: CMakeLists.txt  main.cxx  main2.cxx
Source/exercise28/: CMakeLists.txt  main.cxx
Source/exercise29/: CMakeLists.txt  UseMyOwnFactory.cxx  UseMyRealTimeClockFactory.cxx  itkMyOwn.h  itkMyOwnFactory.cxx  itkMyRealTimeClock.h  itkMyRealTimeClockFactory.cxx
Source/exercise3/: CMakeLists.txt  Image1.cxx  Image1answer.cxx
Source/exercise31/: CMakeLists.txt  itkHighlightherImageFilter.h  itkHighlightherImageFilter.txx  main1.cxx  main2.cxx  main3.cxx  main4.cxx  main5.cxx  main6.cxx
Source/exercise32/: CMakeLists.txt  itkReadITKImageShowVTK.cxx
Source/exercise33/: CMakeLists.txt  itkReadITKImageSegmentShowVTK.cxx
Source/exercise34/: CMakeLists.txt  itkReadITKImage3DSegmentShowVTK.cxx
Source/exercise35/: CMakeLists.txt
Source/exercise35/Initial/: CMakeLists.txt  ITK-MFC.h  ITK-MFC.rc  ITK-MFCDlg.cpp  ITK-MFCDlg.h  Resource.h  stdafx.cpp
Source/exercise35/Initial/res/: ITK-MFC.manifest  ITK-MFC.rc2
Source/exercise35/PlusITK/: CMakeLists.txt  ITK-MFC.cpp  ITK-MFC.rc  ITK-MFCDlg.cpp  ITK-MFCDlg.h  ReadMe.txt  resource.h
Source/exercise35/VTKImageFromITKReader/: CMakeLists.txt  ChildFrm.cpp  MainFrm.cpp  Sample.rc  SampleDoc.cpp  SampleDoc.h  SampleView.cpp  StdAfx.cpp  StdAfx.h  vtkKWImage.cxx  vtkKWImage.h  vtkKWImageIO.cxx  vtkKWImageIO.h  vtkMFCDocument.cpp  vtkMFCRenderView.h
Source/exercise35/VTKImageViewer/: CMakeLists.txt  Sample.cpp  SampleDoc.cpp  SampleDoc.h  SampleView.cpp  vtkMFCRenderView.cpp  vtkMFCView.cpp
Source/exercise4/: CMakeLists.txt  filter.cxx  filterAnswer.cxx
Source/exercise5/: CMakeLists.txt  filter.cxx  filterAnswer.cxx
Source/exercise6/: CMakeLists.txt  filter.cxx  filterAnswer.cxx
Source/exercise7/: CMakeLists.txt  filter.cxx
Source/exercise8/: CMakeLists.txt  filter.cxx  filterAnswer.cxx
Source/exercise9/: CMakeLists.txt  filter.cxx
