PROJECT(Exercise19)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0020 NEW)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE (${ITK_USE_FILE})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE (${VTK_USE_FILE})

INCLUDE_DIRECTORIES( 
  ${Exercise19_SOURCE_DIR} 
  )

ADD_EXECUTABLE( myProject19 MACOSX_BUNDLE myProject.cxx )

TARGET_LINK_LIBRARIES( myProject19
    ${ITK_LIBRARIES}
    ${VTK_LIBRARIES}
    )

ADD_EXECUTABLE( myProject19Answer MACOSX_BUNDLE myProjectAnswer.cxx )

TARGET_LINK_LIBRARIES( myProject19Answer
    ${ITK_LIBRARIES}
    ${VTK_LIBRARIES}
    )

