PROJECT(Exercise32)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0020 NEW)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE (${ITK_USE_FILE})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE (${VTK_USE_FILE})

INCLUDE_DIRECTORIES(
  ${Exercise32_SOURCE_DIR}
  )

ADD_EXECUTABLE( myProject32 MACOSX_BUNDLE itkReadITKImageShowVTK.cxx )

TARGET_LINK_LIBRARIES( myProject32
    ${ITK_LIBRARIES}
    ${VTK_LIBRARIES}
    )
