PROJECT(Exercise33)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE (${USE_ITK_FILE})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE (${USE_VTK_FILE})

INCLUDE_DIRECTORIES(
  ${Exercise33_SOURCE_DIR}
  )

ADD_EXECUTABLE( myProject33 MACOSX_BUNDLE itkReadITKImageSegmentShowVTK.cxx )

TARGET_LINK_LIBRARIES( myProject33
    ${ITK_LIBRARIES}
    ${VTK_LIBRARIES}
    )

