
PROJECT( ITKMFC2 )

ADD_DEFINITIONS(-D_AFXDLL)

SET(CMAKE_MFC_FLAG 1)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)


LINK_LIBRARIES( wsock32 )

ADD_EXECUTABLE( ITKMFC2 WIN32 
  ITK-MFC.rc
  ITK-MFC.cpp
  ITK-MFCDlg.cpp
  stdafx.cpp
  )


TARGET_LINK_LIBRARIES( ITKMFC2
  ITKIO
  ITKCommon
  )

