
PROJECT( ITKMFC2 )
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_DEFINITIONS(-D_AFXDLL)

SET(CMAKE_MFC_FLAG 1)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})


LINK_LIBRARIES( wsock32 )

ADD_EXECUTABLE( ITKMFC2 WIN32 
  ITK-MFC.rc
  ITK-MFC.cpp
  ITK-MFCDlg.cpp
  stdafx.cpp
  )


TARGET_LINK_LIBRARIES( ITKMFC2
  ITKIO
  ITKCommon
  )

